[package]
name = "reach"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reach"
path = "src/main.rs"

[dependencies]
axum = { version = "0.5.17", features = ["headers"] }
serde = "1.0.147"
serde_json = "1.0.87"
mime = "0.3.16"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tokio = { version = "1.21.2", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
jsonwebtoken = "8.1.1"
headers = "0.3.8"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
sqlx-database-tester-macros = "0.4.2"
thiserror = "1.0.37"
once_cell = "1.16.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
